fix: popup z-index

--- a/src/styles/_popup.scss
+++ b/src/styles/_popup.scss
@@ -3,6 +3,7 @@
     width: 100%;
     left: 0;
     top: 0;
+    z-index: 1000;
 }
 
 .r-popup-dropdown {
